--- a/.classpath
+++ b/.classpath
@@ -6,33 +6,8 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0 (MIC)">
-		<attributes>
-			<attribute name="owner.project.facets" value="jst.web"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JSF 2.2 (Mojarra 2.2.0)">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-			<attribute name="owner.project.facets" value="jst.jsf"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/lib/JSF/antlr-2.7.7.jar"/>
-	<classpathentry kind="lib" path="/lib/JSF/classmate-1.3.0.jar"/>
-	<classpathentry kind="lib" path="/lib/JSF/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="/lib/JSF/geronimo-jta_1.1_spec-1.1.1.jar"/>
-	<classpathentry kind="lib" path="/lib/JSF/hibernate-commons-annotations-5.0.1.Final.jar"/>
-	<classpathentry kind="lib" path="/lib/JSF/hibernate-core-5.1.0.Final.jar"/>
-	<classpathentry kind="lib" path="/lib/JSF/hibernate-entitymanager-5.1.0.Final.jar"/>
-	<classpathentry kind="lib" path="/lib/JSF/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="/lib/JSF/jandex-2.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="/lib/JSF/javaee-api-7.0.jar"/>
-	<classpathentry kind="lib" path="/lib/JSF/javassist-3.20.0-GA.jar"/>
-	<classpathentry kind="lib" path="/lib/JSF/javax.faces.jar"/>
-	<classpathentry kind="lib" path="/lib/JSF/jboss-logging-3.3.0.Final.jar"/>
-	<classpathentry kind="lib" path="/lib/JSF/postgresql-9.4.1208.jre6.jar"/>
-	<classpathentry kind="lib" path="/lib/jstl-1.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0 (2)"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
